    a normal cursor, but that also enables the Back/Forward buttons and
    allows people to violate assertions by being too quick (e.g. selecting
    an autopartitioning choice while the installer is still busy analysing
    the possible choices). We should clean this up properly later, but for
    now just restore the allowed-change-step state when the dialog is
    finished.
  * Update translations from Launchpad.

  [ Jonathan Riddell ]
  * KDE frontend:
    - port reboot code to KDE 4, (LP: #360838)

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 15 Apr 2009 12:58:09 +0100

ubiquity (1.12.9) jaunty; urgency=low

  * Update timezone map images.  Slight changes to the color and size of the
    time zone time box.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 14 Apr 2009 12:02:13 +0100

ubiquity (1.12.8) jaunty; urgency=low

  [ Roman Shtylman ]
  * KDE frontend:
    - Fix display of automatic partitioning choices (LP: #358519).

  [ Colin Watson ]
  * GTK frontend:
    - Fix window icon; gtk.window_set_default_icon_from_file seems to work
      better if it's called before the window is created (LP: #358961).
  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 12 Apr 2009 23:59:59 +0100

ubiquity (1.12.7) jaunty; urgency=low

  [ Evan Dandrea ]
  * Draw a box around the time zone text and a highlight around the time
    zone point so that they are more legible.

  [ Colin Watson ]
  * Stop error images always being shown on the user page (LP: #358548). The
    GTK frontend got away with this because the widgets in question are
    hidden in the glade file; the KDE frontend wasn't so lucky.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 09 Apr 2009 18:16:39 +0100

ubiquity (1.12.6) jaunty; urgency=low

  [ Colin Watson ]
  * GTK frontend:
    - Copy-and-paste gdm-signal from powermanagement-interface, since that
      package is no longer in main and is slated to go away. In future we